# python_modulo42

python01/ex0/: ft_garden_intro.py
python01/ex1/: ft_garden_data.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plant_types.py
python01/ex6/: ft_garden_analytics.py
python09/ex0/: space_station.py
python2/ex0/: ft_first_exception.py
python2/ex1/: ft_raise_exception.py
python2/ex2/: ft_different_errors.py
python2/ex3/: ft_custom_errors.py
python2/ex4/: ft_finally_block.py
python3/ex0/: ft_command_quest.py
python3/ex1/: ft_score_analytics.py
python3/ex2/: ft_coordinate_system.py
python3/ex3/: ft_achievement_tracker.py
python3/ex4/: ft_inventory_system.py
python3/ex5/: ft_data_stream.py
python3/ex6/: ft_data_alchemist.py
python4/ex0/: ft_ancient_text.py
python4/ex1/: ft_archive_creation.py
python4/ex2/: ft_stream_management.py
python4/ex3/: ft_vault_security.py
python5/ex0/: data_processor.py
python5/ex1/: data_stream.py
python5/ex2/: data_pipeline.py
python6/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python6/alchemy/: __init__.py  potions.py
python7/ex0/: __init__.py  battle.py
python7/ex1/: __init__.py  capacitor.py
python7/ex2/: __init__.py  tournament.py
python8/ex0/: construct.py
python8/ex1/: loading.py  pyproject.toml
(+18 files in other folders)
