[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "Matrix data loading exercise"
authors = ["thay"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
requests = "^2.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"